--- a/.github/workflows/build-dll.yml
+++ b/.github/workflows/build-dll.yml
@@ -29,9 +29,9 @@ jobs:
         shell: bash
         run: |
           cmake -S . -B build -G "Visual Studio 17 2022" \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DOpenCV_DIR="${{ github.workspace }}/opencv_dist/opencv/build" \
-            -DCUDA_ARCHITECTURES="75;80;86"
+          -DCMAKE_BUILD_TYPE=Release \
+          -DOpenCV_DIR="${{ github.workspace }}/opencv_dist/opencv/build" \
+          -DCMAKE_CUDA_ARCHITECTURES="75;80;86"   # <-- CMAKE_CUDA_, not CUDA_"
 
       - name: Build
         run: cmake --build build --config Release --target cuda_wrapper
