--- a/.github/workflows/build-dll.yml
+++ b/.github/workflows/build-dll.yml
@@ -1,39 +1,70 @@
 name: Build Windows CUDA DLL
-
 on:
   push:
-    branches: [ "main" ] # Сборка будет запускаться при каждом пуше в main
-  workflow_dispatch:      # Позволяет запустить сборку вручную кнопкой
-
+    branches: [ "main" ]
+  workflow_dispatch:
 jobs:
   build:
     runs-on: windows-2022
 
     steps:
-      - name: Checkout code
+      - name: Checkout user code
         uses: actions/checkout@v4
 
       - name: Install CUDA
         uses: Jimver/cuda-toolkit@v0.2.30
         with:
-          cuda: '13.1.0 ' # Укажите версию, которая вам нужна
+          cuda: '13.1.1'
           method: 'network'
 
-      - name: Install OpenCV
-        run: |
-          # Скачиваем официальную сборку OpenCV для Windows
-          curl -L -o opencv.exe https://github.com/opencv/opencv/releases/download/4.10.0/opencv-4.10.0-windows.exe
-          7z x opencv.exe -o${{ github.workspace }}\opencv_dist
+      - name: Checkout OpenCV
+        uses: actions/checkout@v4
 
-      - name: Configure CMake
+        with:
+          repository: opencv/opencv
+          ref: 4.10.0
+          path: opencv
+
+      - name: Checkout OpenCV Contrib
+        uses: actions/checkout@v4
+        with:
+          repository: opencv/opencv_contrib
+          ref: 4.10.0
+          path: opencv_contrib
+
+      - name: Configure and Build OpenCV with CUDA
+        shell: bash
+        run: |
+          # Конфигурируем OpenCV. Отключаем тесты и сторонние модули для ускорения сборки
+          cmake -S opencv -B opencv_build -G "Visual Studio 17 2022" \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DOPENCV_EXTRA_MODULES_PATH="${{ github.workspace }}/opencv_contrib/modules" \
+            -DWITH_CUDA=ON \
+            -DCUDA_FAST_MATH=ON \
+            -DWITH_CUDNN=OFF \
+            -DWITH_CUBLAS=ON \
+            -DCUDA_ARCH_BIN="75;80;86" \
+            -DBUILD_TESTS=OFF \
+            -DBUILD_PERF_TESTS=OFF \
+            -DBUILD_EXAMPLES=OFF \
+            -DBUILD_DOCS=OFF \
+            -DBUILD_JAVA=OFF \
+            -DBUILD_opencv_python2=OFF \
+            -DBUILD_opencv_python3=OFF
+
+          # Собираем OpenCV (этот процесс займет много времени)
+          cmake --build opencv_build --config Release --parallel
+
+      - name: Configure CMake for User Project
         shell: bash
         run: |
           cmake -S . -B build -G "Visual Studio 17 2022" \
-          -DCMAKE_BUILD_TYPE=Release \
-          -DOpenCV_DIR="${{ github.workspace }}/opencv_dist/opencv/build" \
-          -DCMAKE_CUDA_ARCHITECTURES="75;80;86"   # <-- CMAKE_CUDA_, not CUDA_"
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_CXX_STANDARD=17 \
+            -DOpenCV_DIR="${{ github.workspace }}/opencv_build" \
+            -DCMAKE_CUDA_ARCHITECTURES="75;80;86"
 
-      - name: Build
+      - name: Build User Project
         run: cmake --build build --config Release --target cuda_wrapper
 
       - name: Upload Artifact
