Refactor GitHub Actions workflow for OpenCV build

--- a/.github/workflows/build-dll.yml
+++ b/.github/workflows/build-dll.yml
@@ -8,63 +8,32 @@ jobs:
     runs-on: windows-2022
 
     steps:
-      - name: Checkout user code
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Install CUDA
         uses: Jimver/cuda-toolkit@v0.2.30
         with:
-          cuda: '13.1.1'
+          # Версия CUDA из конфига: 13.1.115. Используем минорную версию 13.1.x
+          cuda: '13.1.1' 
           method: 'network'
 
-      - name: Checkout OpenCV
-        uses: actions/checkout@v4
-
-        with:
-          repository: opencv/opencv
-          ref: 4.10.0
-          path: opencv
-
-      - name: Checkout OpenCV Contrib
-        uses: actions/checkout@v4
-        with:
-          repository: opencv/opencv_contrib
-          ref: 4.10.0
-          path: opencv_contrib
-
-      - name: Configure and Build OpenCV with CUDA
-        shell: bash
+      - name: Install OpenCV
         run: |
-          # Конфигурируем OpenCV. Отключаем тесты и сторонние модули для ускорения сборки
-          cmake -S opencv -B opencv_build -G "Visual Studio 17 2022" \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DOPENCV_EXTRA_MODULES_PATH="${{ github.workspace }}/opencv_contrib/modules" \
-            -DWITH_CUDA=ON \
-            -DCUDA_FAST_MATH=ON \
-            -DWITH_CUDNN=OFF \
-            -DWITH_CUBLAS=ON \
-            -DCUDA_ARCH_BIN="75;80;86" \
-            -DBUILD_TESTS=OFF \
-            -DBUILD_PERF_TESTS=OFF \
-            -DBUILD_EXAMPLES=OFF \
-            -DBUILD_DOCS=OFF \
-            -DBUILD_JAVA=OFF \
-            -DBUILD_opencv_python2=OFF \
-            -DBUILD_opencv_python3=OFF
+          # Обновлено до версии 4.13.0 согласно конфигурации
+          curl -L -o opencv.exe https://github.com/opencv/opencv/releases/download/4.13.0/opencv-4.13.0-windows.exe
+          7z x opencv.exe -o${{ github.workspace }}\opencv_dist
 
-          # Собираем OpenCV (этот процесс займет много времени)
-          cmake --build opencv_build --config Release --parallel
-
-      - name: Configure CMake for User Project
+      - name: Configure CMake
         shell: bash
         run: |
           cmake -S . -B build -G "Visual Studio 17 2022" \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_CXX_STANDARD=17 \
-            -DOpenCV_DIR="${{ github.workspace }}/opencv_build" \
-            -DCMAKE_CUDA_ARCHITECTURES="75;80;86"
+          -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_CXX_STANDARD=17 \
+          -DOpenCV_DIR="${{ github.workspace }}/opencv_dist/opencv/build" \
+          -DCMAKE_CUDA_ARCHITECTURES="75;80;86;87;88;89;90;100;103;110;120;121"
 
-      - name: Build User Project
+      - name: Build
         run: cmake --build build --config Release --target cuda_wrapper
 
       - name: Upload Artifact
