--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,29 +1,12 @@
-cmake_minimum_required(VERSION 3.20)
-project(MyCudaProject LANGUAGES CXX CUDA)
+cmake_minimum_required(VERSION 4.1)
+project(cource)
 
+set(CMAKE_CXX_STANDARD 20)
 
-set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -allow-unsupported-compiler")
-
-
-find_package(CUDAToolkit REQUIRED)
+set(OpenCV_DIR "D:/opencv/mybuild/install/x64/mingw/lib")
 find_package(OpenCV REQUIRED)
 
+add_library(cource SHARED library.cpp)
 
-add_library(cuda_wrapper SHARED library.cu)
-
-
-set_target_properties(cuda_wrapper PROPERTIES
-        CUDA_SEPARABLE_COMPILATION ON
-        POSITION_INDEPENDENT_CODE ON
-
-        CUDA_ARCHITECTURES "75;80;86;86-virtual"
-)
-
-
-target_include_directories(cuda_wrapper PRIVATE ${OpenCV_INCLUDE_DIRS})
-
-
-target_link_libraries(cuda_wrapper PRIVATE
-        ${OpenCV_LIBS}
-        CUDA::cudart
-)
+target_include_directories(cource PRIVATE ${OpenCV_INCLUDE_DIRS})
+target_link_libraries(cource PRIVATE ${OpenCV_LIBS})
