--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,35 @@
             <artifactId>jna</artifactId>
             <version>5.18.1</version>
         </dependency>
+
+        <!-- Обнаружение -->
+        <dependency>
+            <groupId>org.jmdns</groupId>
+            <artifactId>jmdns</artifactId>
+            <version>3.5.9</version>
+        </dependency>
+
+        <!-- Транспорт -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.2.5.Final</version>
+        </dependency>
+
+        <!-- Сериализация -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
+        <!-- БД -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.44.1.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
